--- a/content/css/game.css
+++ b/content/css/game.css
@@ -19,14 +19,16 @@ body {
 
 .Card {
 	position: absolute;
-	
+	display: block;
+
 	left: 50%;
 	top: 50%;
 	width: 7.143%;
 	height: 10%;
 
-	resize: both;
+	resize: vertical;
 	overflow: hidden;
+	box-sizing: border-box;
 
 	background-color: #FFFFFF;
 }
@@ -80,6 +82,8 @@ body {
 
 	resize: vertical;
 	overflow: hidden;
+
+	box-sizing: border-box;
 
 	border-width: 1px;
 	border-style: solid;
@@ -439,8 +443,8 @@ body {
 .Zone {
 	position: absolute;
 
-	width: 1rem;
-	height: 1rem;
+	width: 10rem;
+	height: 10rem;
 	min-width: 1px;
 	min-height: 1px;
 
