--- a/content/css/game.css
+++ b/content/css/game.css
@@ -474,3 +474,54 @@ body {
 
 	z-index: -1;
 }
+
+.centerXY {
+	position: absolute;
+
+	left: 50%;
+	top: 50%;
+
+	transform: translateX(-50%) translateY(-50%);
+
+	text-align: center;
+}
+
+.PriorityButton {
+	position: absolute;
+
+	height: 20%;
+
+	border-radius: 0.5rem;
+
+	overflow: auto;
+	resize: vertical;
+}
+
+.PriorityPurpose {
+	position: absolute;
+
+	top: 50%;
+	width: 100%;
+
+	box-sizing: border-box;
+	transform: translateY(-50%);
+
+	text-align: center;
+	font-weight: bolder;
+
+	background-color: #C0C0C0;
+}
+
+.PriorityButton div {
+	position: absolute;
+
+	width: 100%;
+	height: 50%;
+
+	cursor: pointer;
+	font-weight: bolder;
+	font-size: 0.5rem;
+
+	color: #000000;
+	background-color: #CCCCCC;
+}
