--- a/content/css/game.css
+++ b/content/css/game.css
@@ -421,12 +421,14 @@ body {
 	position: absolute;
 
 	top: 0;
-	left: 0;
+	left: 50%;
 
 	width: min-content;
 
-	padding: 0.25rem 0.75rem 0.75rem 0.25rem;
-	border-radius: 0 0 0.5rem 0;
+	transform: translateX(-50%);
+
+	padding: 0.25rem 0.75rem 0.75rem 0.75rem;
+	border-radius: 0 0rem 0.5rem 0.5rem;
 
 	display: none;
 
