--- a/content/css/game.css
+++ b/content/css/game.css
@@ -607,3 +607,21 @@ body {
 	80% { opacity: 100%; }
 	100% { opacity: 0%; }
 }
+
+#enemyHover {
+	position: absolute;
+	display: none;
+
+	width: 100%;
+	height: 100%;
+
+	box-sizing: border-box;
+
+	border-width: 2px;
+	border-style: solid;
+	border-color: #3333FF;
+
+	pointer-events: none;
+
+	background-color: #00000000;
+}
