--- a/content/css/game.css
+++ b/content/css/game.css
@@ -625,3 +625,32 @@ body {
 
 	background-color: #00000000;
 }
+
+#offerWait {
+	position: absolute;
+	display: none;
+
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+
+	background-color: #00000088;
+}
+
+#offerWait div {
+	position: absolute;
+
+	left: 50%;
+	top: 50%;
+	width: min-content;
+	height: min-content;
+
+	padding: 1rem;
+	white-space: nowrap;
+	border-radius: 4px;
+	transform: translateX(-50%) translateY(-50%);
+
+	color: #FFFFFF;
+	background-color: #222222;
+}
